sidebar,togglebtn,scss

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,6 +10,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
   width: 400px;
   background-color: white;
 }
@@ -26,13 +27,14 @@
 .sidebar .bg .links a {
   font-size: 40px;
 }
-.sidebar .bg button {
+.sidebar button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   position: fixed;
   top: 25px;
-  height: 25px;
+  left: 25px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }/*# sourceMappingURL=sidebar.css.map */
