--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,8 +10,10 @@
         position: fixed;
         top: 0;
         left: 0;
+        bottom: 0;
         width: 400px;
         background-color: white;
+        
 
         .links{
             position: absolute;
@@ -26,17 +28,18 @@
                 font-size: 40px;
             }
 
-        }
-        button{
+        }   
+    }
+    button{
             width: 50px;    
             height: 50px;
             border-radius: 50%;
             position: fixed;
             top: 25px;
-            height: 25px;
+            left: 25px;
             background-color: transparent;
             border: none;
+            cursor: pointer;
 
         }
-    }
 }
