--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,16 +1,17 @@
 .navbar {
-  height: 100px;
+  height: 100px !important;
   margin-top: 10px;
 }
 .navbar .wrapper {
   max-width: 1366px;
   margin: auto;
   display: flex;
-  align-self: center;
+  align-items: center;
   justify-content: space-between;
   height: 100%;
 }
 .navbar .wrapper span {
+  margin-left: 100px;
   font-weight: bold;
 }
 .navbar .wrapper .social {
